--- a/.github/workflows/latex_compile_commit.yml
+++ b/.github/workflows/latex_compile_commit.yml
@@ -1,4 +1,4 @@
-name: Compile all .tex to local PDF folders
+name: Compile LaTeX Documents
 
 on:
   push:
@@ -19,22 +19,29 @@ jobs:
         git config --global user.name 'github-actions'
         git config --global user.email 'github-actions@github.com'
 
-    - name: Install LaTeX
-      run: sudo apt-get update && sudo apt-get install -y texlive-full
+    - name: Install minimal LaTeX (faster)
+      run: sudo apt-get update && sudo apt-get install -y \
+        texlive-latex-base texlive-latex-recommended \
+        texlive-fonts-recommended texlive-latex-extra \
+        latexmk
 
-    - name: Compile all .tex files and move PDFs to subfolders
+    - name: Compile all .tex files and output PDFs
       run: |
         find . -name "*.tex" | while read texfile; do
           dir=$(dirname "$texfile")
           base=$(basename "$texfile" .tex)
-          mkdir -p "$dir/pdf"
-          pdflatex -interaction=nonstopmode -output-directory "$dir/pdf" "$texfile"
+          outdir="$dir/pdf"
+          mkdir -p "$outdir"
+          echo "🔧 Compiling $texfile ..."
+          pdflatex -interaction=nonstopmode -output-directory "$outdir" "$texfile" \
+            || { echo "❌ Failed to compile $texfile. Log follows:"; cat "$outdir/$base.log"; }
         done
 
     - name: Commit generated PDFs
       run: |
         git add */pdf/*.pdf */*/pdf/*.pdf || true
-        git commit -m "Auto-generated PDFs [ci skip]" || echo "No changes to commit"
+        git commit -m "📝 Auto-generated PDFs [ci skip]" || echo "No changes to commit"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
