--- a/.github/workflows/latex_compile_commit.yml
+++ b/.github/workflows/latex_compile_commit.yml
@@ -9,10 +9,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # nutné pro push přes GITHUB_TOKEN
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+        persist-credentials: true
 
     - name: Install full LaTeX environment
       run: |
@@ -30,9 +35,10 @@ jobs:
 
     - name: Commit generated PDFs
       run: |
-        git add */pdf/*.pdf */*/pdf/*.pdf || true
+        git config user.name  "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        shopt -s globstar
+        git add **/pdf/*.pdf || true
         git commit -m "Auto-generated PDFs [ci skip]" || echo "No changes to commit"
         git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
