--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -19,6 +19,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Install TeX packages
+        run: |
+          tlmgr update --self
+          tlmgr install pgf pgfplots xcolor slashed
+
 
       # IMPORTANT: Run latexmk *inside* TeX Live action (so latexmk exists)
       - name: Build roots (TeX Live)
