--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           root_file: |
             consolidation_project/ubt_core_main.tex
+          work_in_root_file_dir: true
           pre_compile: |
             tlmgr update --self
             tlmgr install pgf pgfplots xcolor cm-super
