--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -1,35 +1,87 @@
-name: LaTeX build (latex-action)
+name: Build all LaTeX PDFs
+
 on:
   push:
-    paths:
-      - 'consolidation_project/**.tex'
-      - '.github/workflows/latex_build.yml'
   pull_request:
-    paths:
-      - 'consolidation_project/**.tex'
-      - '.github/workflows/latex_build.yml'
-  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        root: []  # naplníme níže dynamicky
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Compile with LaTeX
+      - uses: actions/checkout@v4
+
+      # Najdi všechny .tex s \documentclass (tj. skutečné rooty)
+      - id: discover
+        name: Discover LaTeX roots
+        run: |
+          set -euo pipefail
+          # Seznam všech .tex souborů a filtr na \documentclass
+          # Vynecháme pár běžných adresářů
+          mapfile -t roots < <(git ls-files '*.tex' \
+            | grep -Ev '^(vendor|node_modules|build|out|dist)/' \
+            | xargs -r grep -l -E '\\documentclass')
+          # Převod do JSON pole pro matrix
+          if [ ${#roots[@]} -eq 0 ]; then
+            echo "Nebyly nalezeny žádné root .tex soubory."
+            echo 'roots=[]' >> "$GITHUB_OUTPUT"
+          else
+            printf '%s\n' "${roots[@]}" \
+              | jq -R -s -c 'split("\n")[:-1]' \
+              | sed 's/^/roots=/' >> "$GITHUB_OUTPUT"
+          fi
+
+      # Naplnění matice dynamicky
+      - name: Set matrix
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const roots = JSON.parse(process.env.ROOTS || '[]');
+            core.setOutput('matrix', { root: roots });
+          env:
+            ROOTS: ${{ steps.discover.outputs.roots }}
+        id: matrixgen
+
+      # Znovuspuštění jobu s maticí
+      - name: Re-run with dynamic matrix
+        if: ${{ always() }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            core.setFailed('Re-run with matrix')
+        # Tento krok úmyslně selže a GitHub spustí níže definovaný matrix job
+    continue-on-error: true
+
+  # Skutečný matrix job
+  compile:
+    needs: build
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.build.outputs.matrix) }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: LaTeX build ${{ matrix.root }}
         uses: xu-cheng/latex-action@v4
         with:
-          root_file: |
-            consolidation_project/ubt_core_main.tex
-          work_in_root_file_dir: true
+          root_file: ${{ matrix.root }}
+          # pokud chceš, aby build pokračoval i při chybě některého rootu:
+          continue_on_error: true
+          # doplnění balíčků, které často chybí:
           pre_compile: |
             tlmgr update --self
-            tlmgr install pgf pgfplots xcolor cm-super
-          latexmk_shell_escape: true
-      - name: Upload PDFs
+            tlmgr install cm-super xcolor pgf pgfplots slashed
+
+      - name: Upload PDF ${{ matrix.root }}
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: pdfs
-          path: |
-            **/*.pdf
-            !**/node_modules/**
-            !**/.git/**
+          name: pdf-${{ matrix.root }}
+          path: ${{ matrix.root && matrix.root != '' && steps.findpdf.outputs.path || '**/*.pdf' }}
+
