--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -1,33 +1,26 @@
-name: Build all LaTeX PDFs
+name: LaTeX – build all roots
 
 on:
   push:
   pull_request:
 
 jobs:
-  build:
+  discover:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        root: []  # naplníme níže dynamicky
-
+    outputs:
+      roots: ${{ steps.discover.outputs.roots }}
     steps:
       - uses: actions/checkout@v4
 
-      # Najdi všechny .tex s \documentclass (tj. skutečné rooty)
       - id: discover
         name: Discover LaTeX roots
+        shell: bash
         run: |
           set -euo pipefail
-          # Seznam všech .tex souborů a filtr na \documentclass
-          # Vynecháme pár běžných adresářů
           mapfile -t roots < <(git ls-files '*.tex' \
             | grep -Ev '^(vendor|node_modules|build|out|dist)/' \
             | xargs -r grep -l -E '\\documentclass')
-          # Převod do JSON pole pro matrix
           if [ ${#roots[@]} -eq 0 ]; then
-            echo "Nebyly nalezeny žádné root .tex soubory."
             echo 'roots=[]' >> "$GITHUB_OUTPUT"
           else
             printf '%s\n' "${roots[@]}" \
@@ -35,53 +28,37 @@ jobs:
               | sed 's/^/roots=/' >> "$GITHUB_OUTPUT"
           fi
 
-      # Naplnění matice dynamicky
-      - name: Set matrix
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const roots = JSON.parse(process.env.ROOTS || '[]');
-            core.setOutput('matrix', { root: roots });
-          env:
-            ROOTS: ${{ steps.discover.outputs.roots }}
-        id: matrixgen
-
-      # Znovuspuštění jobu s maticí
-      - name: Re-run with dynamic matrix
-        if: ${{ always() }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            core.setFailed('Re-run with matrix')
-        # Tento krok úmyslně selže a GitHub spustí níže definovaný matrix job
-    continue-on-error: true
-
-  # Skutečný matrix job
   compile:
-    needs: build
-    if: ${{ always() }}
+    needs: discover
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix: ${{ fromJson(needs.build.outputs.matrix) }}
+      matrix:
+        root: ${{ fromJson(needs.discover.outputs.roots) }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: Compute PDF path
+        id: pdf
+        shell: bash
+        run: |
+          pdf="${{ matrix.root }}"
+          pdf="${pdf%.tex}.pdf"
+          echo "path=$pdf" >> "$GITHUB_OUTPUT"
 
       - name: LaTeX build ${{ matrix.root }}
         uses: xu-cheng/latex-action@v4
         with:
           root_file: ${{ matrix.root }}
-          # pokud chceš, aby build pokračoval i při chybě některého rootu:
           continue_on_error: true
-          # doplnění balíčků, které často chybí:
           pre_compile: |
             tlmgr update --self
             tlmgr install cm-super xcolor pgf pgfplots slashed
 
       - name: Upload PDF ${{ matrix.root }}
-        uses: actions/upload-artifact@v4
         if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: pdf-${{ matrix.root }}
-          path: ${{ matrix.root && matrix.root != '' && steps.findpdf.outputs.path || '**/*.pdf' }}
+          path: ${{ steps.pdf.outputs.path }}
 
