--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -1,71 +1,96 @@
-compile:
-  needs: discover
-  runs-on: ubuntu-latest
-  strategy:
-    fail-fast: false
-    matrix:
-      root: ${{ fromJson(needs.discover.outputs.roots) }}
-  steps:
-    - uses: actions/checkout@v4
+name: LaTeX build (all roots)
 
-    - name: Detect compiler + paths
-    id: detect
-    shell: bash
-    run: |
-      set -euo pipefail
-      root="${{ matrix.root }}"
-      dir="$(dirname "$root")"
-      pdf="${root%.tex}.pdf"
+on:
+  push:
+  pull_request:
 
-      # Detekce kompilátoru podle balíčků/magic commentů
-      compiler="pdflatex"
-      grep -Eq '^[[:space:]]*%!?TEX.*(xelatex|lualatex)' "$root" && compiler="xelatex"
-      grep -Eq '\\usepackage\{(fontspec|polyglossia|unicode-math)\}' "$root" && compiler="xelatex"
-      grep -Eq '\\usepackage\{luacode|luaotfload\}' "$root" && compiler="lualatex"
+jobs:
+  discover:
+    runs-on: ubuntu-latest
+    outputs:
+      roots: ${{ steps.find.outputs.roots }}
+    steps:
+      - uses: actions/checkout@v4
 
-      echo "dir=$dir"   >> "$GITHUB_OUTPUT"
-      echo "pdf=$pdf"   >> "$GITHUB_OUTPUT"
-      echo "compiler=$compiler" >> "$GITHUB_OUTPUT"
+      - id: find
+        name: Discover LaTeX roots
+        shell: bash
+        run: |
+          set -euo pipefail
+          mapfile -t roots < <(git ls-files '*.tex' \
+            | grep -Ev '^(vendor|node_modules|build|out|dist)/' \
+            | xargs -r grep -l -E '\\documentclass')
 
-    - name: LaTeX build ${{ matrix.root }}
-      uses: xu-cheng/latex-action@v4
-      with:
-        root_file: ${{ matrix.root }}
-        work_in_root_file_dir: true
-        continue_on_error: true
-        compiler: ${{ steps.detect.outputs.compiler }}
-        # pro latexmk přepínače nechává action default
-        pre_compile: |
-          tlmgr update --self
-          # často chybějící balíčky:
-          tlmgr install \
-            cm-super xcolor pgf pgfplots tikz-cd slashed \
-            siunitx physics mathtools amsfonts amsmath \
-            babel csquotes biblatex biber etoolbox \
-            graphicx hyperref geometry soul \
-            fontspec unicode-math polyglossia \
-            standalone float caption subcaption \
-            todonotes wrapfig mhchem ifmtarg kvoptions url \
-            listings fancyvrb pdftexcmds kvsetkeys
-        post_compile: |
-          echo "Done."
+          if [ ${#roots[@]} -eq 0 ]; then
+            echo "roots=[]" >> "$GITHUB_OUTPUT"
+          else
+            printf '%s\n' "${roots[@]}" \
+              | jq -R -s -c 'split("\n")[:-1]' \
+              | sed 's/^/roots=/' >> "$GITHUB_OUTPUT"
+          fi
 
-    - name: Upload PDF (if exists)
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: pdf-${{ matrix.root }}
-        path: ${{ steps.detect.outputs.pdf }}
-        if-no-files-found: ignore
+  compile:
+    needs: discover
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        root: ${{ fromJson(needs.discover.outputs.roots) }}
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Upload logs on failure
-      if: failure() || always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: logs-${{ matrix.root }}
-        path: |
-          ${{ steps.detect.outputs.dir }}/*.log
-          ${{ steps.detect.outputs.dir }}/*.blg
-          ${{ steps.detect.outputs.dir }}/*.fls
-        if-no-files-found: ignore
+      - name: Detect compiler + paths
+        id: detect
+        shell: bash
+        run: |
+          set -euo pipefail
+          root="${{ matrix.root }}"
+          dir="$(dirname "$root")"
+          pdf="${root%.tex}.pdf"
+
+          compiler="pdflatex"
+          grep -Eq '^[[:space:]]*%!?TEX.*(xelatex|lualatex)' "$root" && compiler="xelatex"
+          grep -Eq '\\usepackage\{(fontspec|polyglossia|unicode-math)\}' "$root" && compiler="xelatex"
+          grep -Eq '\\usepackage\{luacode|luaotfload\}' "$root" && compiler="lualatex"
+
+          echo "dir=$dir" >> "$GITHUB_OUTPUT"
+          echo "pdf=$pdf" >> "$GITHUB_OUTPUT"
+          echo "compiler=$compiler" >> "$GITHUB_OUTPUT"
+
+      - name: LaTeX build ${{ matrix.root }}
+        uses: xu-cheng/latex-action@v4
+        with:
+          root_file: ${{ matrix.root }}
+          work_in_root_file_dir: true
+          continue_on_error: true
+          compiler: ${{ steps.detect.outputs.compiler }}
+          pre_compile: |
+            tlmgr update --self
+            tlmgr install \
+              cm-super xcolor pgf pgfplots tikz-cd slashed \
+              siunitx physics mathtools amsfonts amsmath \
+              babel csquotes biblatex etoolbox \
+              graphicx hyperref geometry soul \
+              standalone float caption subcaption \
+              todonotes wrapfig mhchem ifmtarg kvoptions url \
+              listings fancyvrb pdftexcmds kvsetkeys
+
+      - name: Upload PDF (if exists)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pdf-${{ matrix.root }}
+          path: ${{ steps.detect.outputs.pdf }}
+          if-no-files-found: ignore
+
+      - name: Upload logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: logs-${{ matrix.root }}
+          path: |
+            ${{ steps.detect.outputs.dir }}/*.log
+            ${{ steps.detect.outputs.dir }}/*.blg
+            ${{ steps.detect.outputs.dir }}/*.fls
+          if-no-files-found: ignore
 
