--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -1,14 +1,8 @@
-name: LaTeX build
+name: LaTeX build (all roots)
 
 on:
   push:
-    paths:
-      - '**.tex'
-      - '.github/workflows/latex_build.yml'
   pull_request:
-    paths:
-      - '**.tex'
-      - '.github/workflows/latex_build.yml'
 
 jobs:
   discover:
@@ -23,32 +17,15 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          mapfile -t candidates < <(git ls-files '*.tex' \
-            | grep -Ev '^(vendor|node_modules|build|out|dist|consolidation_project/old)/')
-
-          roots=()
-          for f in "${candidates[@]}"; do
-            # najdi první ne-prázdnou a ne-komentářovou řádku
-            first="$(awk '
-              /^[[:space:]]*%/ {next}      # přeskoč komentáře
-              /^[[:space:]]*$/ {next}      # přeskoč prázdné
-              {print; exit}
-            ' "$f" || true)"
-
-            # musí začínat \documentclass
-            if [[ "$first" =~ ^[[:space:]]*\\\\documentclass ]]; then
-              roots+=("$f")
-            fi
-          done
-
+          mapfile -t roots < <(git ls-files '*.tex' \
+            | grep -Ev '^(vendor|node_modules|build|out|dist)/' \
+            | xargs -r grep -l -E '\\documentclass')
           if [ ${#roots[@]} -eq 0 ]; then
-            echo "Nebyly nalezeny žádné root .tex soubory."
-            echo 'roots=[]' >> "$GITHUB_OUTPUT"
+            echo '[]' > roots.json
           else
-            printf '%s\n' "${roots[@]}" \
-              | jq -R -s -c 'split("\n")[:-1]' \
-              | sed 's/^/roots=/' >> "$GITHUB_OUTPUT"
+            printf '%s\n' "${roots[@]}" | jq -R -s -c 'split("\n")[:-1]' > roots.json
           fi
+          echo "roots=$(cat roots.json)" >> "$GITHUB_OUTPUT"
 
   compile:
     needs: discover
@@ -68,13 +45,22 @@ jobs:
           root="${{ matrix.root }}"
           dir="$(dirname "$root")"
           pdf="${root%.tex}.pdf"
+
+          # pick compiler
           compiler="pdflatex"
           grep -Eq '^[[:space:]]*%!?TEX.*(xelatex|lualatex)' "$root" && compiler="xelatex"
           grep -Eq '\\usepackage\{(fontspec|polyglossia|unicode-math)\}' "$root" && compiler="xelatex"
-          grep -Eq '\\usepackage\{luacode|luaotfload\}' "$root" && compiler="lualatex"
-          echo "dir=$dir"   >> "$GITHUB_OUTPUT"
-          echo "pdf=$pdf"   >> "$GITHUB_OUTPUT"
-          echo "compiler=$compiler" >> "$GITHUB_OUTPUT"
+          grep -Eq '\\usepackage\{(luacode|luaotfload)\}' "$root" && compiler="lualatex"
+
+          # safe artifact name (no slashes etc.)
+          safe_name="$(echo "$root" | tr '/\\:' '__')"
+
+          {
+            echo "dir=$dir"
+            echo "pdf=$pdf"
+            echo "compiler=$compiler"
+            echo "safe_name=$safe_name"
+          } >> "$GITHUB_OUTPUT"
 
       - name: LaTeX build ${{ matrix.root }}
         uses: xu-cheng/latex-action@v4
@@ -85,15 +71,14 @@ jobs:
           compiler: ${{ steps.detect.outputs.compiler }}
           pre_compile: |
             tlmgr update --self
+            # Commonly needed packages
             tlmgr install \
-              cm-super xcolor pgf pgfplots tikz-cd slashed \
-              siunitx physics mathtools amsfonts amsmath \
-              babel csquotes biblatex biber etoolbox \
-              graphicx hyperref geometry soul \
-              fontspec unicode-math polyglossia \
-              standalone float caption subcaption \
-              todonotes wrapfig mhchem ifmtarg kvoptions url \
-              listings fancyvrb pdftexcmds kvsetkeys
+              amsfonts amsmath mathtools siunitx physics \
+              babel csquotes etoolbox geometry hyperref graphics graphicx url \
+              pgf pgfplots tikz-cd standalone float caption subcaption \
+              listings fancyvrb soul wrapfig mhchem ifmtarg kvoptions kvsetkeys pdftexcmds \
+              biblatex biber \
+              fontspec unicode-math polyglossia
           post_compile: |
             echo "Done."
 
@@ -101,15 +86,15 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: pdf-${{ matrix.root }}-logs
+          name: pdf-${{ steps.detect.outputs.safe_name }}
           path: ${{ steps.detect.outputs.pdf }}
           if-no-files-found: ignore
 
       - name: Upload logs on failure
-        if: failure() || always()
+        if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: logs-${{ matrix.root//\//_ }}
+          name: logs-${{ steps.detect.outputs.safe_name }}
           path: |
             ${{ steps.detect.outputs.dir }}/*.log
             ${{ steps.detect.outputs.dir }}/*.blg
